--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ set(CMAKE_BUILD_TYPE Debug)
 
 project(tcp)
 
-add_executable(main src/main.cpp)
+add_executable(main src/main.cpp src/bot.cpp)
+include_directories(src)
 #target_link_libraries(main m)
 
 add_custom_target(tcp ALL
